# cofaas

./: .gitignore  .gitmodules  Cargo.toml  Containerfile  LICENSE  Makefile  README.md
archive/consumer/impl/: go.mod
archive/helloworld/: Makefile  helloworld.pb.go
archive/helloworld_stub/: go.mod  helloworld.proto  helloworld_grpc.pb.go
archive/helloworld_stub/wit/: exports.wit
archive/prodcon_stub/: Makefile  go.mod  go.sum
archive/producer/component/: Makefile  component.go  component_test.go  config.yml
archive/producer/impl/: go.sum
cofaasify/benchmark/: analyze.R  benchmark.go  go.mod  go.sum
cofaasify/src/: description.rs  executor.rs  main.rs
cofaasify/testdata/: update.sh
cofaasify/testdata/protos/: prodcon.proto
consumer/component/: Makefile  component.go  component_test.go  go.mod
consumer/impl/: consumer.go  go.mod
helloworld/: foo  go.mod  helloworld_grpc.pb.go  helloworld_vtproto.pb.go
helloworld_stub/: Makefile  go.mod  helloworld_grpc.pb.go
helloworld_stub/wit/: decls.wit  imports.wit
logtest/: go.mod  logtest  logtest.go
prodcon/: go.mod  prodcon.pb.go  prodcon.proto
prodcon_stub/: go.mod  prodcon_grpc.pb.go
producer/component/: component.go  component_test.go  go.mod  go.sum
producer/component/wit/: producer-interface.wit
producer/impl/: go.mod  producer-interface.wit  producer.go
src/: description.rs
stubs/grpc/: go.mod  lib.go
stubs/net/: go.mod  lib.go
test_data/: description.yaml
testdata/: description.yaml
testdata/functions/: Dockerfile  Makefile  docker-compose.yml
testdata/functions/consumer/: cofaas_metadata.yaml  consumer.go
testdata/functions/go/: Makefile  docker-compose.yml
testdata/functions/producer/: cofaas_metadata.yaml  (+1 more)
testdata/functions/rust/producer/: Cargo.toml
testdata/functions/rust/producer/src/: main.rs
testdata/protos/: helloworld.proto
wit/: chained-service.wit
wrapper/: Cargo.toml  build.rs
wrapper/src/: host.rs  main.rs  server.rs
yamls/docker-compose/: docker-compose-tracing.yml  docker-compose.yml
(+25 files in other folders)
