[package]
name = "cofaasify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.12.0" }
