[package]
name = "wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
wasi-common = { version = "10.0.0", path = "../wasmtime/crates/wasi-common" }
wasmtime = { version = "10.0.0", path = "../wasmtime/crates/wasmtime", features = ["component-model"] }
wasmtime-wasi = { version = "10.0.0", path = "../wasmtime/crates/wasi", features = ["tokio", "wasi-tokio"] }
