[package]
name = "wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
futures = "0.3.28"
prost = "0.11.9"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.9.2"
wasi-common = { version = "13.0.0", path = "../deps/wasmtime/crates/wasi-common" }
wasmtime = { version = "13.0.0", path = "../deps/wasmtime/crates/wasmtime", features = ["component-model"] }
wasmtime-wasi = { version = "13.0.0", path = "../deps/wasmtime/crates/wasi", features = ["tokio", "wasi-tokio"] }

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[build-dependencies]
tonic-build = "0.9.2"
